Enhancements to searching and add graph context menu.